fix(header-cell): improve spacing and layout

--- a/src/components/ServiceTable.scss
+++ b/src/components/ServiceTable.scss
@@ -14,7 +14,7 @@
 
 .service-header-cell {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   i {
     margin-left: 16px;
@@ -25,6 +25,10 @@
 .semi-width {
   width: 33%;
   float: left;
+}
+
+.full-width {
+  width: 90%;
 }
 
 .editable-cell {
